--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,30 +1,34 @@
-# This file configures the static analysis results for your project (errors,
-# warnings, and lints).
-#
-# This enables the 'recommended' set of lints from `package:lints`.
-# This set helps identify many issues that may lead to problems when running
-# or consuming Dart code, and enforces writing Dart using a single, idiomatic
-# style and format.
-#
-# If you want a smaller set of lints you can change this to specify
-# 'package:lints/core.yaml'. These are just the most critical lints
-# (the recommended set includes the core lints).
-# The core lints are also what is used by pub.dev for scoring packages.
-
 include: package:lints/recommended.yaml
 
-# Uncomment the following section to specify additional rules.
+analyzer:
+  exclude:
+    - "**/*.g.dart" # 自動生成ファイルを解析対象から除外
+    - "**/*.freezed.dart"
+    - "**/*.mocks.dart"
+    - "**/*.config.dart"
 
-# linter:
-#   rules:
-#     - camel_case_types
+  errors:
+    missing_required_param: error
+    missing_return: error
+    prefer_const_constructors: error
+    always_declare_return_types: warning
 
-# analyzer:
-#   exclude:
-#     - path/to/excluded/files/**
+linter:
+  rules:
+    - always_declare_return_types
+    - always_put_required_named_parameters_first
+    - prefer_const_constructors
+    - prefer_single_quotes
+    - prefer_interpolation_to_compose_strings
 
-# For more information about the core and recommended set of lints, see
-# https://dart.dev/go/core-lints
+    - avoid_unnecessary_containers
+    - unnecessary_this
+    - unnecessary_lambdas
 
-# For additional information about configuring this file, see
-# https://dart.dev/guides/language/analysis-options
+    - prefer_relative_imports
+    - avoid_dynamic_calls
+    - avoid_types_as_parameter_names
+    - avoid_null_checks_in_equality_operators
+
+    - prefer_const_literals_to_create_immutables
+    - use_key_in_widget_constructors
