--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,10 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  synchronized: ^3.3.0+3
   # path: ^1.8.0
 
 dev_dependencies:
   lints: ^4.0.0
+  logging: ^1.3.0
   test: ^1.24.0
