--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,9 @@ description: A starting point for Dart libraries or applications.
 version: 1.0.0
 repository: https://github.com/yordgenome03/cacherine
 
+dependencies:
+  synchronized: ^3.0.0
+
 environment:
   sdk: ^3.5.3
 
