--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,10 @@ version: 1.0.0
 repository: https://github.com/yordgenome03/cacherine
 
 dependencies:
-  synchronized: ^3.0.0
+  synchronized: ^3.3.0+3
 
 environment:
-  sdk: ^3.5.3
+  sdk: ">=2.19.0 <4.0.0"
 
 dev_dependencies:
   lints: ^4.0.0
