--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,7 @@ on:
       - main
       - develop
       - release/**
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -33,12 +34,16 @@ jobs:
         run: dart pub get
         timeout-minutes: 10
 
+      - name: Check outdated dependencies
+        run: dart pub outdated
+        timeout-minutes: 5
+
       - name: Verify formatting
         run: dart format --output=none --set-exit-if-changed .
         timeout-minutes: 5
 
-      - name: Analyze project source
-        run: dart analyze
+      - name: Analyze project source with strict mode
+        run: dart analyze --fatal-infos
         timeout-minutes: 5
 
       - name: Run tests with coverage
@@ -55,4 +60,8 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage/lcov.info
           fail_ci_if_error: true
+        timeout-minutes: 5
+
+      - name: Validate package before publishing
+        run: dart pub publish --dry-run
         timeout-minutes: 5
