--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -1,21 +1,45 @@
-name: OpenSSF Scorecard
+name: OpenSSF Scorecard Analysis
 
 on:
+  push:
+    branches:
+      - main
   schedule:
-    - cron: "0 0 * * 0" # Runs every Sunday
+    # Runs every Sunday at 00:00 UTC (09:00 JST)
+    - cron: '0 0 * * 0'
   workflow_dispatch:
+
+permissions:
+  contents: read
+  security-events: write
+  id-token: write
 
 jobs:
   security:
+    name: Scorecard analysis
     runs-on: ubuntu-latest
+
     steps:
-      - name: Run OpenSSF Scorecard
-        uses: ossf/scorecard-action@v5.0.0
+      - name: "Checkout code"
+        uses: actions/checkout@v4
+
+      - name: "Run OpenSSF Scorecard"
+        uses: ossf/scorecard-action@v2.4.0
         with:
           results_file: results.sarif
-        continue-on-error: true
+          results_format: sarif
+          publish_results: true
 
-      - name: Upload SARIF results
-        uses: github/codeql-action/upload-sarif@v2
+      # Upload SARIF results as an artifact (optional)
+      - name: "Upload SARIF artifact"
+        uses: actions/upload-artifact@v4
+        with:
+          name: Scorecard-SARIF
+          path: results.sarif
+          retention-days: 7
+
+      # Upload SARIF results to GitHub Code Scanning (optional)
+      - name: "Upload to GitHub Code Scanning"
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: results.sarif
