--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,13 @@ version: 1.1.2
 repository: https://github.com/yordgenome03/cacherine
 
 dependencies:
-  synchronized: ^3.3.0+3
+  synchronized: 3.3.0+3
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dev_dependencies:
-  lints: ^5.0.0
-  test: ^1.24.0
+  lints: 5.0.0
+  test: 1.25.15
 
 license: MIT
