--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Run Tests and Static Analysis
+name: Run Tests
 
 on:
   pull_request:
@@ -13,19 +13,6 @@ permissions:
   actions: write
 
 jobs:
-  static-analysis:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          languages: dart
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
-
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 30
@@ -36,7 +23,7 @@ jobs:
       - name: Setup Dart
         uses: dart-lang/setup-dart@v1
         with:
-          sdk: "3.5.3"
+          sdk: "3.7.2"
         timeout-minutes: 5
 
       - name: Cache Dart dependencies
