--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,17 @@
 name: cacherine
 description: A Dart library offering flexible in-memory cache implementations (FIFO, LRU, MRU, LFU) with both single-threaded and async options for concurrent environments.
-version: 1.1.2
+version: 1.1.3
 repository: https://github.com/yordgenome03/cacherine
 
 dependencies:
-  synchronized: 3.3.0+3
+  synchronized: ^3.3.1
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.7.2 <4.0.0"
 
 dev_dependencies:
-  lints: 5.0.0
-  test: 1.25.15
+  lints: ^5.0.0
+  test: ^1.25.8
+  dart_code_metrics: ^5.7.6
 
 license: MIT
